@@ -7066,13 +7066,16 @@ The archive indexer.
 General options passed to the archive indexer.
 
 .IP RC
-The resource compiler used by the RES builder.
+The resource compiler used to build
+a Microsoft Visual C++ resource file.
 
 .IP RCCOM
-The command line used by the RES builder.
+The command line used to build
+a Microsoft Visual C++ resource file.
 
 .IP RCCOMSTR
-The string displayed when invoking the resource compiler.
+The string displayed when invoking the resource compiler
+to build a Microsoft Visual C++ resource file.
 If this is not set, then $RCCOM (the command line) is displayed.
 
 .IP RCFLAGS
